--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/matbakutis/intro-express-homework/issues"
   },
-  "homepage": "https://github.com/matbakutis/intro-express-homework#readme"
+  "homepage": "https://github.com/matbakutis/intro-express-homework#readme",
+  "dependencies": {
+    "ejs": "^2.5.7",
+    "express": "^4.16.2"
+  }
 }
