--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.3.2"
   }
 }
