--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/toddhersko/intro-express-homework#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "gulp-minify": "^1.0.0",
+    "gulp-uglify": "^3.0.0"
   }
 }
