update and delte now functional

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/cullenmooney/intro-express-homework#readme",
   "dependencies": {
     "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "method-override": "^2.3.10"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
