--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "gulp": "^3.9.1",
-    "gulp-less": "^3.3.2"
+    "gulp-less": "^3.3.2",
+    "method-override": "^2.3.10",
   },
   "devDependencies": {
     "gulp-minify": "^1.0.0",
