--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "gulp-less": "^3.3.2"
+    "gulp-less": "^3.3.2",
+    "method-override": "^2.3.10"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
